Fixed an issue with black background when using dark mode in some extensions/browsers

--- a/frontend/src/Pages/ServicesPage/ServicesPage.css
+++ b/frontend/src/Pages/ServicesPage/ServicesPage.css
@@ -3,11 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
 
 .services-page--darkened {
   pointer-events: none;
   filter: brightness(50%);
+  height: calc(100vh - 4rem);
 }
 
 .services-page__header1 {
